fix: align wallet attestation handling

--- a/apps/client/src/app/issuance/issuance-config/issuance-config-show/issuance-config-show.component.scss
+++ b/apps/client/src/app/issuance/issuance-config/issuance-config-show/issuance-config-show.component.scss
@@ -81,10 +81,6 @@
   color: #673ab7;
 }
 
-.icon-enabled {
-  color: #4caf50;
-}
-
 .warning-text {
   color: #f57c00;
   font-weight: 500;
